# voxel_odometry

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: VoxelGridTracking.rviz  VoxelOdometryVerdino.rviz
launch/: launch.launch  voxel_odometry_sequence.launch  voxel_odometry_verdino.launch
params/: campus.yaml  voxel_odometry_verdino_params.yaml
src/: CMakeLists.txt  main_voxel.cpp  params_structs.h  particle3d.cpp  particle3d.h  utilspolargridtracking.cpp  utilspolargridtracking.h  voxel.cpp  voxel.h  voxel_odometry.cpp  voxel_odometry.h  voxelobstacle.cpp  voxelobstacle.h
